Fixed shortened and double-overflowing raw settings view caused by setting textarea height in ai settings

--- a/src/authoring/components/editors/raw-settings-control.scss
+++ b/src/authoring/components/editors/raw-settings-control.scss
@@ -1,11 +1,15 @@
-.raw-settings-control {
-  width: 100%;
-  height: 100%;
-  min-height: 0;
-  min-width: 0;
-  resize: none;
-  box-sizing: border-box;
-  border: 0;
-  outline: none;
-  background: inherit;
+.workspace {
+  .config {
+    textarea.raw-settings-control {
+      width: 100%;
+      height: 100%;
+      min-height: 0;
+      min-width: 0;
+      resize: none;
+      box-sizing: border-box;
+      border: 0;
+      outline: none;
+      background: inherit;
+    }
+  }
 }
